neo/cnvrhi/cnvrhi.h

void c_nvrhi_samplerDesc_hashCombine(const nvrhi::SamplerDesc* desc, size_t* seed);
bool c_nvrhi_bindingSetDesc_eql(
		const nvrhi::BindingSetDesc* a,
		const nvrhi::BindingSetDesc* b);
void c_nvrhi_bindingSetDesc_hashCombine(const nvrhi::BindingSetDesc* desc, size_t* seed);
void c_nvrhi_hashCombine_ptr(size_t* seed, void* ptr);
void c_nvrhi_hashCombine_u64(size_t* seed, uint64_t u);
void c_nvrhi_hashCombine_float(size_t* seed, float f);
void c_nvrhi_hashCombine_int(size_t* seed, int i);
unsigned long c_nvrhi_resource_addRef(nvrhi::IResource* res);
unsigned long c_nvrhi_resource_release(nvrhi::IResource* res);