neo/ztech/renderer/nvrhi.zig

const std = @import("std");

pub const GraphicsAPI = enum(u8) {
    D3D11,
    D3D12,
    VULKAN,
};

pub const IResource = opaque {
    extern fn c_nvrhi_resource_addRef(*IResource) c_ulong;
    extern fn c_nvrhi_resource_release(*IResource) c_ulong;

    pub fn addRef(resource: *IResource) c_ulong {
        return c_nvrhi_resource_addRef(resource);
    }

    pub fn release(resource: *IResource) c_ulong {
        return c_nvrhi_resource_release(resource);
    }
};

pub fn RefCountPtr(InterfaceType: type) type {
    return extern struct {
        const Self = @This();

        ptr_: ?*InterfaceType = null,

        pub fn init(other: ?*InterfaceType) Self {
            var ref = Self{ .ptr_ = other };
            ref.internalAddRef();
            return ref;
        }

        pub fn deinit(self: *Self) void {
            _ = self.internalRelease();
        }

        pub fn detach(self: *Self) ?*InterfaceType {
            const ptr = self.ptr_;
            self.ptr_ = null;
            return ptr;
        }

        pub fn swap(self: *Self, r: *Self) void {
            const tmp = self.ptr_;
            self.ptr_ = r.ptr_;
            r.ptr_ = tmp;
        }

        pub fn attach(self: *Self, other: *InterfaceType) void {
            if (self.ptr_) |ptr| {
                const ref = ptr.release();

                std.debug.assert(ref != 0 or @intFromPtr(ptr) != @intFromPtr(other));
            }

            self.ptr_ = other;
        }

        pub fn create(other: ?*InterfaceType) Self {
            var ref_ptr = RefCountPtr(InterfaceType){};
            ref_ptr.attach(other);
            return ref_ptr;
        }

        pub fn reset(self: *Self) c_ulong {
            return self.internalRelease();
        }

        fn internalAddRef(self: *Self) void {
            if (self.ptr_) |ptr| {
                _ = @as(*IResource, @ptrCast(ptr)).addRef();
            }
        }

        fn internalRelease(self: *Self) c_ulong {
            var ref: c_ulong = 0;

            if (self.ptr_) |ptr| {
                self.ptr_ = null;
                ref = @as(*IResource, @ptrCast(ptr)).release();
            }

            return ref;
        }
    };
}

pub const CommandListHandle = RefCountPtr(ICommandList);
pub const BufferHandle = RefCountPtr(IBuffer);
pub const BindingLayoutHandle = RefCountPtr(IBindingLayout);
pub const GraphicsPipelineHandle = RefCountPtr(IGraphicsPipeline);
pub const BindingSetHandle = RefCountPtr(IBindingSet);
pub const c_MaxRenderTargets: usize = 8;
pub const c_MaxBindingLayouts: usize = 5;
pub const c_MaxBindingsPerLayout: usize = 128;
pub const c_MaxVertexAttributes: usize = 16;
pub const c_MaxViewports: usize = 16;

pub const MipLevel = u32;
pub const ArraySlice = u32;

pub const TextureSubresourceSet = extern struct {
    pub const AllMipLevels = std.math.maxInt(MipLevel);
    pub const AllArraySlices = std.math.maxInt(ArraySlice);

    baseMipLevel: MipLevel = 0,
    numMipLevels: MipLevel = 1,
    baseArraySlice: ArraySlice = 0,
    numArraySlices: ArraySlice = 1,
};

pub const AllSubresources = TextureSubresourceSet{
    .baseMipLevel = 0,
    .numMipLevels = TextureSubresourceSet.AllMipLevels,
    .baseArraySlice = 0,
    .numArraySlices = TextureSubresourceSet.AllArraySlices,
};

pub const BufferRange = extern struct {
    byteOffset: u64,
    byteSize: u64,
};

pub const EntireBuffer = BufferRange{
    .byteOffset = 0,
    .byteSize = std.math.maxInt(u64),
};

pub const BindingSetItem = extern struct {
    resourceHandle: ?*IResource,
    slot: u32,
    type: ResourceType,
    dimension: TextureDimension,
    format: Format,
    unused: u8,
    unnamed_0: extern union {
        subresources: TextureSubresourceSet,
        range: BufferRange,
        rawData: [2]u64,
    },

    pub fn createConstantBuffer(
        slot: u32,
        opt_buffer: ?*IBuffer,
        range: BufferRange,
    ) BindingSetItem {
        const is_volatile = if (opt_buffer) |buffer|
            buffer.getDesc().isVolatile
        else
            false;

        return .{
            .slot = slot,
            .type = if (is_volatile) .VolatileConstantBuffer else .ConstantBuffer,
            .resourceHandle = @ptrCast(opt_buffer),
            .format = .UNKNOWN,
            .dimension = .Unknown,
            .unnamed_0 = .{
                .range = range,
            },
            .unused = 0,
        };
    }

    pub fn createTextureSrv(
        slot: u32,
        texture: *ITexture,
        format: Format,
        subresources: TextureSubresourceSet,
        dimension: TextureDimension,
    ) BindingSetItem {
        return .{
            .slot = slot,
            .type = .Texture_SRV,
            .resourceHandle = @ptrCast(texture),
            .format = format,
            .dimension = dimension,
            .unused = 0,
            .unnamed_0 = .{
                .subresources = subresources,
            },
        };
    }

    pub fn createPushConstants(slot: u32, byte_size: u32) BindingSetItem {
        return .{
            .slot = slot,
            .type = .PushConstants,
            .resourceHandle = null,
            .format = .UNKNOWN,
            .dimension = .Unknown,
            .unused = 0,
            .unnamed_0 = .{
                .range = .{ .byteOffset = 0, .byteSize = byte_size },
            },
        };
    }

    pub fn createSampler(slot: u32, sampler: *ISampler) BindingSetItem {
        return .{
            .slot = slot,
            .type = .Sampler,
            .resourceHandle = @ptrCast(sampler),
            .format = .UNKNOWN,
            .dimension = .Unknown,
            .unused = 0,
            .unnamed_0 = .{
                .rawData = .{ 0, 0 },
            },
        };
    }
};

pub fn static_vector(T: type, max_elements: u32) type {
    return extern struct {
        const Self = @This();

        base: [max_elements]T = undefined,
        current_size: usize = 0,

        pub fn pushBack(self: *Self, element: T) void {
            std.debug.assert(self.current_size < max_elements);

            self.base[self.current_size] = element;
            self.current_size += 1;
        }

        pub fn slice(self: *Self) []T {
            return self.base[0..self.current_size];
        }

        pub fn fromSliceWithDefault(init_slice: []const T, default: T) Self {
            var base: [max_elements]T = undefined;
            for (base[0..init_slice.len], init_slice) |*item, in| {
                item.* = in;
            }

            if (base.len > init_slice.len) {
                for (base[init_slice.len..]) |*item| {
                    item.* = default;
                }
            }

            return .{
                .base = base,
                .current_size = init_slice.len,
            };
        }

        pub fn fromSlice(init_slice: []const T) Self {
            var base: [max_elements]T = undefined;
            for (base[0..init_slice.len], init_slice) |*item, in| {
                item.* = in;
            }

            return .{
                .base = base,
                .current_size = init_slice.len,
            };
        }
    };
}

extern fn c_nvrhi_hashCombine_ptr(*usize, *anyopaque) void;
pub fn hashCombine_ptr(seed: *usize, ptr: *anyopaque) void {
    c_nvrhi_hashCombine_ptr(seed, ptr);
}

extern fn c_nvrhi_hashCombine_u64(seed: *usize, u: u64) void;
pub fn hashCombine_u64(seed: *usize, u: u64) void {
    c_nvrhi_hashCombine_u64(seed, u);
}

extern fn c_nvrhi_hashCombine_int(seed: *usize, i: c_int) void;
pub fn hashCombine_int(seed: *usize, i: c_int) void {
    c_nvrhi_hashCombine_int(seed, i);
}

extern fn c_nvrhi_hashCombine_float(seed: *usize, f: f32) void;
pub fn hashCombine_float(seed: *usize, f: f32) void {
    c_nvrhi_hashCombine_float(seed, f);
}

pub const BindingSetDesc = extern struct {
    extern fn c_nvrhi_bindingSetDesc_hashCombine(*const BindingSetDesc, *usize) void;
    extern fn c_nvrhi_bindingSetDesc_eql(*const BindingSetDesc, *const BindingSetDesc) bool;

    bindings: static_vector(BindingSetItem, c_MaxBindingsPerLayout),
    trackLiveness: bool = true,

    pub fn hashCombine(desc: *const BindingSetDesc, seed: *usize) void {
        c_nvrhi_bindingSetDesc_hashCombine(desc, seed);
    }

    pub fn eql(desc: *const BindingSetDesc, other: *const BindingSetDesc) bool {
        return c_nvrhi_bindingSetDesc_eql(desc, other);
    }
};

pub const Color = extern struct {
    r: f32 = 0,
    g: f32 = 0,
    b: f32 = 0,
    a: f32 = 0,
};

pub const Viewport = extern struct {
    minX: f32 = 0,
    maxX: f32 = 0,
    minY: f32 = 0,
    maxY: f32 = 0,
    minZ: f32 = 0,
    maxZ: f32 = 1,

    pub fn width(viewport: *const Viewport) f32 {
        return viewport.maxX - viewport.minX;
    }

    pub fn height(viewport: *const Viewport) f32 {
        return viewport.maxY - viewport.minY;
    }

    pub fn fromWidthHeight(w: f32, h: f32) Viewport {
        return .{
            .maxX = w,
            .maxY = h,
        };
    }
};

pub const SamplerAddressMode = enum(u8) {
    // Vulkan names
    ClampToEdge,
    Repeat,
    ClampToBorder,
    MirroredRepeat,
    MirrorClampToEdge,

    // D3D names
    pub const Clamp = SamplerAddressMode.ClampToEdge;
    pub const Wrap = SamplerAddressMode.Repeat;
    pub const Border = SamplerAddressMode.ClampToBorder;
    pub const Mirror = SamplerAddressMode.MirroredRepeat;
    pub const MirrorOnce = SamplerAddressMode.MirrorClampToEdge;
};

pub const SamplerReductionType = enum(u8) {
    Standard,
    Comparison,
    Minimum,
    Maximum,
};

pub const SamplerDesc = extern struct {
    borderColor: Color = .{ .r = 1, .g = 1, .b = 1, .a = 1 },
    maxAnisotropy: f32 = 1,
    mipBias: f32 = 0,
    minFilter: bool = true,
    magFilter: bool = true,
    mipFilter: bool = true,
    addressU: SamplerAddressMode = .ClampToEdge,
    addressV: SamplerAddressMode = .ClampToEdge,
    addressW: SamplerAddressMode = .ClampToEdge,
    reductionType: SamplerReductionType = .Standard,

    extern fn c_nvrhi_samplerDesc_hashCombine(*const SamplerDesc, *usize) void;

    pub fn hashCombine(desc: *const SamplerDesc, hash: *usize) void {
        c_nvrhi_samplerDesc_hashCombine(desc, hash);
    }
};

pub const TextureDimension = enum(u8) {
    Unknown,
    Texture1D,
    Texture1DArray,
    Texture2D,
    Texture2DArray,
    TextureCube,
    TextureCubeArray,
    Texture2DMS,
    Texture2DMSArray,
    Texture3D,
};

pub const ComponentSwizzle = enum(c_int) {
    Red,
    Green,
    Blue,
    Alpha,
    Zero,
    One,
};

pub const ComponentMapping = extern struct {
    r: ComponentSwizzle = .Red,
    g: ComponentSwizzle = .Green,
    b: ComponentSwizzle = .Blue,
    a: ComponentSwizzle = .Alpha,
};

pub const TextureDesc = extern struct {
    width: u32 = 1,
    height: u32 = 1,
    depth: u32 = 1,
    arraySize: u32 = 1,
    mipLevels: u32 = 1,
    sampleCount: u32 = 1,
    sampleQuality: u32 = 0,
    format: Format = .UNKNOWN,
    dimension: TextureDimension = .Texture2D,
    componentMapping: ComponentMapping = .{},
    debugName: CppString = std.mem.zeroes(CppString),
    isShaderResource: bool = true,
    isRenderTarget: bool = false,
    isUAV: bool = false,
    isTypeless: bool = false,
    isShadingRateSurface: bool = false,
    sharedResourceFlags: SharedResourceFlags = .None,
    isVirtual: bool = false,
    clearValue: Color = .{},
    useClearValue: bool = false,
    initialState: ResourceStates = ResourceStates.unknown,
    keepInitialState: bool = false,
    padding_: [7]u8 = undefined,
};
